<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.freelancewatermelon.licnakarta.MainActivity">


    <LinearLayout
        android:id="@+id/ll_reader_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/tv_reader_indicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/absent"
            android:gravity="center"
            android:padding="5dp"
            android:text="Čitač"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tv_card_indicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/absent"
            android:gravity="center"
            android:padding="5dp"
            android:text="Kartica"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_reader_status">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="120dp"
                android:layout_height="160dp"
                android:layout_margin="@dimen/padding_img"
                android:background="@color/grey"
                android:contentDescription="@string/app_name" />

            <Button
                android:id="@+id/btn_save_to_pdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_to_pdf"
                android:visibility="visible" />

            <RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tV_prezime"
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/prezime" />

                <TextView
                    android:id="@+id/prezime_lk"
                    style="@style/data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/tV_prezime"
                    android:layout_toRightOf="@+id/tV_ime_roditelja"
                    android:text="@string/text" />

                <TextView
                    android:id="@+id/tV_ime"
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/prezime_lk"
                    android:text="@string/ime" />

                <TextView
                    android:id="@+id/ime_lk"
                    style="@style/data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/tV_ime"
                    android:layout_toRightOf="@+id/tV_ime_roditelja"
                    android:text="@string/text" />

                <TextView
                    android:id="@+id/tV_ime_roditelja"
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/ime_lk"
                    android:text="@string/ime_roditelja" />

                <TextView
                    android:id="@+id/ime_roditelja_lk"
                    style="@style/data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="false"
                    android:layout_alignTop="@id/tV_ime_roditelja"
                    android:layout_toRightOf="@id/tV_ime_roditelja"
                    android:text="@string/text" />

                <TextView
                    android:id="@+id/tV_mesto_rodjenja"
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/ime_roditelja_lk"
                    android:text="@string/mesto_rodjenja" />

                <TextView
                    android:id="@+id/mesto_rodjenja_lk"
                    style="@style/data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="false"
                    android:layout_alignTop="@id/tV_mesto_rodjenja"
                    android:layout_toRightOf="@id/tV_ime_roditelja"
                    android:text="@string/text" />

                <TextView
                    android:id="@+id/tV_adresa"
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/mesto_rodjenja_lk"
                    android:text="@string/adresa" />

                <TextView
                    android:id="@+id/adresa_lk"
                    style="@style/data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="false"
                    android:layout_alignTop="@id/tV_adresa"
                    android:layout_toRightOf="@id/tV_ime_roditelja"
                    android:text="@string/text" />

                <TextView
                    android:id="@+id/tV_jmbg"
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/adresa_lk"
                    android:text="@string/jmbg" />

                <TextView
                    android:id="@+id/jmbg_lk"
                    style="@style/data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="false"
                    android:layout_alignTop="@+id/tV_jmbg"
                    android:layout_toRightOf="@id/tV_ime_roditelja"
                    android:text="@string/text" />

                <TextView
                    android:id="@+id/tV_pol"
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/jmbg_lk"
                    android:text="@string/pol" />

                <TextView
                    android:id="@+id/pol_lk"
                    style="@style/data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/tV_pol"
                    android:layout_toRightOf="@id/tV_ime_roditelja"
                    android:text="@string/text" />

                <TextView
                    android:id="@+id/tV_izdao"
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/pol_lk"
                    android:text="@string/izdao" />

                <TextView
                    android:id="@+id/izdao_lk"
                    style="@style/data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/tV_izdao"
                    android:layout_toRightOf="@id/tV_ime_roditelja"
                    android:text="@string/text" />

                <TextView
                    android:id="@+id/tV_broj_l_karte"
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/izdao_lk"
                    android:text="@string/broj_l_karte" />

                <TextView
                    android:id="@+id/broj_l_karte_lk"
                    style="@style/data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/tV_broj_l_karte"
                    android:layout_toRightOf="@id/tV_ime_roditelja"
                    android:text="@string/text" />

                <TextView
                    android:id="@+id/tV_datum_izdavanja"
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/broj_l_karte_lk"
                    android:text="@string/datum_izdavanja" />

                <TextView
                    android:id="@+id/datum_izdavanja_lk"
                    style="@style/data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/tV_datum_izdavanja"
                    android:layout_toRightOf="@id/tV_ime_roditelja"
                    android:text="@string/text" />

                <TextView
                    android:id="@+id/tV_vazi_do"
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/datum_izdavanja_lk"
                    android:text="@string/vazi_do" />

                <TextView
                    android:id="@+id/vazi_do_lk"
                    style="@style/data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/tV_vazi_do"
                    android:layout_toRightOf="@id/tV_ime_roditelja"
                    android:text="@string/text" />

                <TextView
                    android:id="@+id/tV_datum_rodjenja"
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/vazi_do_lk"
                    android:text="@string/datum_rodjenja" />

                <TextView
                    android:id="@+id/datum_rodjenja_lk"
                    style="@style/data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/tV_datum_rodjenja"
                    android:layout_toRightOf="@id/tV_ime_roditelja"
                    android:text="@string/text" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
